@@ -1238,6 +1238,8 @@ samples/Makefile
 support/Makefile
 data/config
 mono.spec
+tools/Makefile
+tools/locale-builder/Makefile
 ])
 
 echo "
